# scrabble

./: .gitignore  CMakeLists.txt  README.md  debug.sh  release.sh
data/: dico_little.txt  saved_board.txt  test_boards_wrong_board.txt
data/boards/: board0.txt  board1.txt
include/: Application.hpp  Bag.hpp  Board.hpp  Bonus.hpp  Dictionary.hpp  Direction.hpp  Hand.hpp  Move.hpp  Player.hpp  Position.hpp  Spot.hpp  State.hpp  Test.hpp
src/: Application.cpp  Bag.cpp  Board.cpp  Bonus.cpp  Dictionary.cpp  Direction.cpp  Hand.cpp  Move.cpp  Player.cpp  Position.cpp  Spot.cpp  State.cpp  Test.cpp  board_tests.cpp  main.cpp  test.cpp  test_board.cpp
